tests/rosetta/transpiler/C/array-concatenation.error
compile failed: exit status 1: /tmp/ctranspile4249565298/array-concatenation.mochi.c: In function ‘_mem’:
/tmp/ctranspile4249565298/array-concatenation.mochi.c:64:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   64 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile4249565298/array-concatenation.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c: At top level:
/tmp/ctranspile4249565298/array-concatenation.mochi.c:68:10: error: initializer element is not constant
   68 | int *a = malloc(3 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:69:1: warning: data definition has no type or storage class
   69 | a[0] = 1;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:69:1: warning: type defaults to ‘int’ in declaration of ‘a’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:69:1: error: conflicting types for ‘a’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:68:6: note: previous definition of ‘a’ with type ‘int *’
   68 | int *a = malloc(3 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:70:1: warning: data definition has no type or storage class
   70 | a[1] = 2;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:70:1: warning: type defaults to ‘int’ in declaration of ‘a’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:71:1: warning: data definition has no type or storage class
   71 | a[2] = 3;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:71:1: warning: type defaults to ‘int’ in declaration of ‘a’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:73:10: error: initializer element is not constant
   73 | int *b = malloc(3 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:74:1: warning: data definition has no type or storage class
   74 | b[0] = 7;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:74:1: warning: type defaults to ‘int’ in declaration of ‘b’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:74:1: error: conflicting types for ‘b’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:73:6: note: previous definition of ‘b’ with type ‘int *’
   73 | int *b = malloc(3 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:75:1: warning: data definition has no type or storage class
   75 | b[1] = 12;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:75:1: warning: type defaults to ‘int’ in declaration of ‘b’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:76:1: warning: data definition has no type or storage class
   76 | b[2] = 60;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:76:1: warning: type defaults to ‘int’ in declaration of ‘b’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:78:10: error: initializer element is not constant
   78 | int *i = malloc(3 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:79:1: warning: data definition has no type or storage class
   79 | i[0] = 1;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:79:1: warning: type defaults to ‘int’ in declaration of ‘i’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:79:1: error: conflicting types for ‘i’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:78:6: note: previous definition of ‘i’ with type ‘int *’
   78 | int *i = malloc(3 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:80:1: warning: data definition has no type or storage class
   80 | i[1] = 2;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:80:1: warning: type defaults to ‘int’ in declaration of ‘i’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:81:1: warning: data definition has no type or storage class
   81 | i[2] = 3;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:81:1: warning: type defaults to ‘int’ in declaration of ‘i’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:83:10: error: initializer element is not constant
   83 | int *j = malloc(4 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:84:1: warning: data definition has no type or storage class
   84 | j[0] = "Crosby";
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:84:1: warning: type defaults to ‘int’ in declaration of ‘j’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:84:1: error: conflicting types for ‘j’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:83:6: note: previous definition of ‘j’ with type ‘int *’
   83 | int *j = malloc(4 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:85:1: warning: data definition has no type or storage class
   85 | j[1] = "Stills";
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:85:1: warning: type defaults to ‘int’ in declaration of ‘j’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:86:1: warning: data definition has no type or storage class
   86 | j[2] = "Nash";
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:86:1: warning: type defaults to ‘int’ in declaration of ‘j’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:87:1: warning: data definition has no type or storage class
   87 | j[3] = "Young";
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:87:1: warning: type defaults to ‘int’ in declaration of ‘j’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:89:10: error: initializer element is not constant
   89 | int *l = malloc(3 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:90:1: warning: data definition has no type or storage class
   90 | l[0] = 1;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:90:1: warning: type defaults to ‘int’ in declaration of ‘l’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:90:1: error: conflicting types for ‘l’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:89:6: note: previous definition of ‘l’ with type ‘int *’
   89 | int *l = malloc(3 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:91:1: warning: data definition has no type or storage class
   91 | l[1] = 2;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:91:1: warning: type defaults to ‘int’ in declaration of ‘l’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:92:1: warning: data definition has no type or storage class
   92 | l[2] = 3;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:92:1: warning: type defaults to ‘int’ in declaration of ‘l’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:94:10: error: initializer element is not constant
   94 | int *m = malloc(3 * sizeof(int));
      |          ^~~~~~
/tmp/ctranspile4249565298/array-concatenation.mochi.c:95:1: warning: data definition has no type or storage class
   95 | m[0] = 7;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:95:1: warning: type defaults to ‘int’ in declaration of ‘m’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:95:1: error: conflicting types for ‘m’; have ‘int[0]’
/tmp/ctranspile4249565298/array-concatenation.mochi.c:94:6: note: previous definition of ‘m’ with type ‘int *’
   94 | int *m = malloc(3 * sizeof(int));
      |      ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:96:1: warning: data definition has no type or storage class
   96 | m[1] = 12;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:96:1: warning: type defaults to ‘int’ in declaration of ‘m’ [-Wimplicit-int]
/tmp/ctranspile4249565298/array-concatenation.mochi.c:97:1: warning: data definition has no type or storage class
   97 | m[2] = 60;
      | ^
/tmp/ctranspile4249565298/array-concatenation.mochi.c:97:1: warning: type defaults to ‘int’ in declaration of ‘m’ [-Wimplicit-int]

